National: Commented out the admin panel _custom.css from layout.tpl. IE8 border-radius and invisible buttons fixes with CSS3PIE.

--- a/web/interface/themes/national/css/default.css
+++ b/web/interface/themes/national/css/default.css
@@ -4217,6 +4217,7 @@ span.mapMarker  {
     line-height:1em;
     padding: 8px 12px 8px 15px;
     width:auto;
+    position: relative; /* for PIE */
     /* behavior: url(css/css3pie/PIE.php); */ /* for IE */
 }
 
